bcb/mngview/libmng.hpp

//-- type declarations -------------------------------------------------------
typedef Cardinal mng_uint32;
typedef int mng_int32;
typedef Word mng_uint16;
typedef bool mng_bool;
typedef char *mng_pchar;
typedef void *mng_handle;
typedef int mng_retcode;
enum mng_imgtype { mng_it_unknown, mng_it_png, mng_it_mng, mng_it_jng };
typedef void * __stdcall (*mng_memalloc)(Cardinal iLen);
typedef void __stdcall (*mng_memfree)(void * iPtr, Cardinal iLen);
typedef bool __stdcall (*mng_openstream)(void * hHandle);
typedef bool __stdcall (*mng_closestream)(void * hHandle);
typedef bool __stdcall (*mng_readdata)(void * hHandle, void * pBuf, Cardinal iBuflen, Cardinal &pRead
	);
typedef bool __stdcall (*mng_writedata)(void * hHandle, void * pBuf, Cardinal iBuflen, Cardinal &pWritten
	);
typedef bool __stdcall (*mng_errorproc)(void * hHandle, int iErrorcode, Byte iSeverity, Cardinal iChunkname
	, Cardinal iChunkseq, int iExtra1, int iExtra2, char * zErrortext);
typedef bool __stdcall (*mng_traceproc)(void * hHandle, int iFuncnr, Cardinal iFuncseq, char * zFuncname
	);
typedef bool __stdcall (*mng_processheader)(void * hHandle, Cardinal iWidth, Cardinal iHeight);
typedef bool __stdcall (*mng_processtext)(void * hHandle, Byte iType, char * zKeyword, char * zText, 
	char * zLanguage, char * zTranslation);
typedef void * __stdcall (*mng_getcanvasline)(void * hHandle, Cardinal iLinenr);
typedef void * __stdcall (*mng_getbkgdline)(void * hHandle, Cardinal iLinenr);
typedef bool __stdcall (*mng_refresh)(void * hHandle, Cardinal iX, Cardinal iY, Cardinal iWidth, Cardinal 
	iHeight);
typedef Cardinal __stdcall (*mng_gettickcount)(void * hHandle);
typedef bool __stdcall (*mng_settimer)(void * hHandle, Cardinal iMsecs);
typedef bool __stdcall (*mng_processgamma)(void * hHandle, Cardinal iGamma);
typedef bool __stdcall (*mng_processchroma)(void * hHandle, Cardinal iWhitex, Cardinal iWhitey, Cardinal 
	iRedx, Cardinal iRedy, Cardinal iGreenx, Cardinal iGreeny, Cardinal iBluex, Cardinal iBluey);
typedef bool __stdcall (*mng_processsrgb)(void * hHandle, Byte iIntent);
typedef bool __stdcall (*mng_processiccp)(void * hHandle, Cardinal iProfilesize, void * pProfile);
typedef bool __stdcall (*mng_processarow)(void * hHandle, Cardinal iRowsamples, bool bIsRGBA16, void * 
	pRow);
#define MNG_CANVAS_RGB8 (Byte)(0)
#define MNG_CANVAS_RGBA8 (Word)(4096)
#define MNG_CANVAS_ARGB8 (Word)(12288)
#define MNG_CANVAS_BGR8 (Byte)(1)
#define MNG_CANVAS_BGRA8 (Word)(4097)
#define MNG_CANVAS_ABGR8 (Word)(12289)
#define MNG_CANVAS_RGB16 (Word)(256)
#define MNG_CANVAS_RGBA16 (Word)(4352)
#define MNG_CANVAS_ARGB16 (Word)(12544)
#define MNG_CANVAS_BGR16 (Word)(257)
#define MNG_CANVAS_BGRA16 (Word)(4353)
#define MNG_CANVAS_ABGR16 (Word)(12545)
#define MNG_CANVAS_GRAY8 (Byte)(2)
#define MNG_CANVAS_GRAY16 (Word)(258)
#define MNG_CANVAS_GRAYA8 (Word)(4098)
#define MNG_CANVAS_GRAYA16 (Word)(4354)
#define MNG_CANVAS_AGRAY8 (Word)(12290)
#define MNG_CANVAS_AGRAY16 (Word)(12546)
#define MNG_CANVAS_DX15 (Byte)(3)
#define MNG_CANVAS_DX16 (Byte)(4)
#define MNG_UINT_HUH (int)(1077952576)
extern "C" int __stdcall mng_setcb_processheader(void * hHandle, mng_processheader fProc);
extern "C" int __stdcall mng_setcb_processtext(void * hHandle, mng_processtext fProc);
extern "C" int __stdcall mng_setcb_getcanvasline(void * hHandle, mng_getcanvasline fProc);
extern "C" int __stdcall mng_setcb_getbkgdline(void * hHandle, mng_getbkgdline fProc);
extern "C" int __stdcall mng_setcb_refresh(void * hHandle, mng_refresh fProc);
extern "C" int __stdcall mng_setcb_gettickcount(void * hHandle, mng_gettickcount fProc);
extern "C" int __stdcall mng_setcb_settimer(void * hHandle, mng_settimer fProc);
extern "C" int __stdcall mng_setcb_processgamma(void * hHandle, mng_processgamma fProc);
extern "C" int __stdcall mng_setcb_processchroma(void * hHandle, mng_processchroma fProc);
extern "C" int __stdcall mng_setcb_processsrgb(void * hHandle, mng_processsrgb fProc);
extern "C" int __stdcall mng_setcb_processiccp(void * hHandle, mng_processiccp fProc);
extern "C" int __stdcall mng_setcb_processarow(void * hHandle, mng_processarow fProc);
extern "C" mng_memalloc __stdcall mng_getcb_memalloc(void * hHandle);
extern "C" mng_memfree __stdcall mng_getcb_memfree(void * hHandle);
extern "C" mng_openstream __stdcall mng_getcb_openstream(void * hHandle);
extern "C" mng_closestream __stdcall mng_getcb_closestream(void * hHandle);
extern "C" mng_readdata __stdcall mng_getcb_readdata(void * hHandle);
extern "C" mng_writedata __stdcall mng_getcb_writedata(void * hHandle);
extern "C" mng_errorproc __stdcall mng_getcb_errorproc(void * hHandle);
extern "C" mng_traceproc __stdcall mng_getcb_traceproc(void * hHandle);
extern "C" mng_processheader __stdcall mng_getcb_processheader(void * hHandle);
extern "C" mng_processtext __stdcall mng_getcb_processtext(void * hHandle);
extern "C" mng_getcanvasline __stdcall mng_getcb_getcanvasline(void * hHandle);
extern "C" mng_getbkgdline __stdcall mng_getcb_getbkgdline(void * hHandle);
extern "C" mng_refresh __stdcall mng_getcb_refresh(void * hHandle);
extern "C" mng_gettickcount __stdcall mng_getcb_gettickcount(void * hHandle);
extern "C" mng_settimer __stdcall mng_getcb_settimer(void * hHandle);
extern "C" mng_processgamma __stdcall mng_getcb_processgamma(void * hHandle);
extern "C" mng_processchroma __stdcall mng_getcb_processchroma(void * hHandle);
extern "C" mng_processsrgb __stdcall mng_getcb_processsrgb(void * hHandle);
extern "C" mng_processiccp __stdcall mng_getcb_processiccp(void * hHandle);
extern "C" mng_processarow __stdcall mng_getcb_processarow(void * hHandle);
extern "C" int __stdcall mng_set_userdata(void * hHandle, void * pUserdata);
extern "C" int __stdcall mng_set_canvasstyle(void * hHandle, Cardinal iStyle);
extern "C" int __stdcall mng_set_bkgdstyle(void * hHandle, Cardinal iStyle);
extern "C" int __stdcall mng_set_bgcolor(void * hHandle, Word iRed, Word iGreen, Word iBlue);
extern "C" int __stdcall mng_set_storechunks(void * hHandle, bool bStorechunks);
extern "C" int __stdcall mng_set_viewgammaint(void * hHandle, Cardinal iGamma);
extern "C" int __stdcall mng_set_displaygammaint(void * hHandle, Cardinal iGamma);
extern "C" int __stdcall mng_set_dfltimggammaint(void * hHandle, Cardinal iGamma);
extern "C" int __stdcall mng_set_srgb(void * hHandle, bool bIssRGB);
extern "C" int __stdcall mng_set_outputprofile(void * hHandle, char * zFilename);
extern "C" int __stdcall mng_set_srgbprofile(void * hHandle, char * zFilename);
extern "C" int __stdcall mng_set_maxcanvaswidth(void * hHandle, Cardinal iMaxwidth);
extern "C" int __stdcall mng_set_maxcanvasheight(void * hHandle, Cardinal iMaxheight);
extern "C" int __stdcall mng_set_maxcanvassize(void * hHandle, Cardinal iMaxwidth, Cardinal iMaxheight
	);
extern "C" void * __stdcall mng_get_userdata(void * hHandle);
extern "C" mng_imgtype __stdcall mng_get_sigtype(void * hHandle);
extern "C" mng_imgtype __stdcall mng_get_imagetype(void * hHandle);
extern "C" Cardinal __stdcall mng_get_imagewidth(void * hHandle);
extern "C" Cardinal __stdcall mng_get_imageheight(void * hHandle);
extern "C" Cardinal __stdcall mng_get_ticks(void * hHandle);
extern "C" Cardinal __stdcall mng_get_framecount(void * hHandle);
extern "C" Cardinal __stdcall mng_get_layercount(void * hHandle);
extern "C" Cardinal __stdcall mng_get_playtime(void * hHandle);
extern "C" Cardinal __stdcall mng_get_simplicity(void * hHandle);
extern "C" Cardinal __stdcall mng_get_canvasstyle(void * hHandle);
extern "C" Cardinal __stdcall mng_get_bkgdstyle(void * hHandle);
extern "C" void __stdcall mng_get_bgcolor(void * hHandle, Word &iRed, Word &iGreen, Word &iBlue);
extern "C" bool __stdcall mng_get_storechunks(void * hHandle);
extern "C" Cardinal __stdcall mng_get_viewgammaint(void * hHandle);
extern "C" Cardinal __stdcall mng_get_displaygammaint(void * hHandle);
extern "C" Cardinal __stdcall mng_get_dfltimggammaint(void * hHandle);
extern "C" bool __stdcall mng_get_srgb(void * hHandle);
extern "C" Cardinal __stdcall mng_get_maxcanvaswidth(void * hHandle);
extern "C" Cardinal __stdcall mng_get_maxcanvasheight(void * hHandle);