delphi/libmng.pas


function mng_setcb_processheader (    hHandle      : mng_handle;
                                      fProc        : mng_processheader) : mng_retcode;       cdecl;
function mng_setcb_processtext   (    hHandle      : mng_handle;
                                      fProc        : mng_processtext  ) : mng_retcode;       cdecl;

function mng_setcb_getcanvasline (    hHandle      : mng_handle;
                                      fProc        : mng_getcanvasline) : mng_retcode;       cdecl;
function mng_setcb_getbkgdline   (    hHandle      : mng_handle;
                                      fProc        : mng_getbkgdline  ) : mng_retcode;       cdecl;
function mng_setcb_refresh       (    hHandle      : mng_handle;
                                      fProc        : mng_refresh      ) : mng_retcode;       cdecl;

function mng_setcb_gettickcount  (    hHandle      : mng_handle;
                                      fProc        : mng_gettickcount ) : mng_retcode;       cdecl;
function mng_setcb_settimer      (    hHandle      : mng_handle;
                                      fProc        : mng_settimer     ) : mng_retcode;       cdecl;

function mng_setcb_processgamma  (    hHandle      : mng_handle;
                                      fProc        : mng_processgamma ) : mng_retcode;       cdecl;
function mng_setcb_processchroma (    hHandle      : mng_handle;
                                      fProc        : mng_processchroma) : mng_retcode;       cdecl;
function mng_setcb_processsrgb   (    hHandle      : mng_handle;
                                      fProc        : mng_processsrgb  ) : mng_retcode;       cdecl;
function mng_setcb_processiccp   (    hHandle      : mng_handle;
                                      fProc        : mng_processiccp  ) : mng_retcode;       cdecl;
function mng_setcb_processarow   (    hHandle      : mng_handle;
                                      fProc        : mng_processarow  ) : mng_retcode;       cdecl;

{****************************************************************************}

function mng_getcb_memalloc      (    hHandle      : mng_handle       ) : mng_memalloc;      cdecl;
function mng_getcb_memfree       (    hHandle      : mng_handle       ) : mng_memfree;       cdecl;

function mng_getcb_openstream    (    hHandle      : mng_handle       ) : mng_openstream;    cdecl;
function mng_getcb_closestream   (    hHandle      : mng_handle       ) : mng_closestream;   cdecl;

function mng_getcb_readdata      (    hHandle      : mng_handle       ) : mng_readdata;      cdecl;

function mng_getcb_writedata     (    hHandle      : mng_handle       ) : mng_writedata;     cdecl;

function mng_getcb_errorproc     (    hHandle      : mng_handle       ) : mng_errorproc;     cdecl;
function mng_getcb_traceproc     (    hHandle      : mng_handle       ) : mng_traceproc;     cdecl;

function mng_getcb_processheader (    hHandle      : mng_handle       ) : mng_processheader; cdecl;
function mng_getcb_processtext   (    hHandle      : mng_handle       ) : mng_processtext;   cdecl;

function mng_getcb_getcanvasline (    hHandle      : mng_handle       ) : mng_getcanvasline; cdecl;
function mng_getcb_getbkgdline   (    hHandle      : mng_handle       ) : mng_getbkgdline;   cdecl;
function mng_getcb_refresh       (    hHandle      : mng_handle       ) : mng_refresh;       cdecl;

function mng_getcb_gettickcount  (    hHandle      : mng_handle       ) : mng_gettickcount;  cdecl;
function mng_getcb_settimer      (    hHandle      : mng_handle       ) : mng_settimer;      cdecl;

function mng_getcb_processgamma  (    hHandle      : mng_handle       ) : mng_processgamma;  cdecl;
function mng_getcb_processchroma (    hHandle      : mng_handle       ) : mng_processchroma; cdecl;
function mng_getcb_processsrgb   (    hHandle      : mng_handle       ) : mng_processsrgb;   cdecl;
function mng_getcb_processiccp   (    hHandle      : mng_handle       ) : mng_processiccp;   cdecl;
function mng_getcb_processarow   (    hHandle      : mng_handle       ) : mng_processarow;   cdecl;

{****************************************************************************}

function mng_set_userdata        (    hHandle      : mng_handle;
                                      iUserdata    : mng_int32        ) : mng_retcode;       cdecl;

function mng_set_canvasstyle     (    hHandle      : mng_handle;
                                      iStyle       : mng_uint32       ) : mng_retcode;       cdecl;
function mng_set_bkgdstyle       (    hHandle      : mng_handle;
                                      iStyle       : mng_uint32       ) : mng_retcode;       cdecl;

function mng_set_bgcolor         (    hHandle      : mng_handle;
                                      iRed         : mng_uint16;
                                      iGreen       : mng_uint16;
                                      iBlue        : mng_uint16       ) : mng_retcode;       cdecl;

function mng_set_storechunks     (    hHandle      : mng_handle;
                                      bStorechunks : mng_bool         ) : mng_retcode;       cdecl;

function mng_set_viewgammaint    (    hHandle      : mng_handle;
                                      iGamma       : mng_uint32       ) : mng_retcode;       cdecl;
function mng_set_displaygammaint (    hHandle      : mng_handle;
                                      iGamma       : mng_uint32       ) : mng_retcode;       cdecl;
function mng_set_dfltimggammaint (    hHandle      : mng_handle;
                                      iGamma       : mng_uint32       ) : mng_retcode;       cdecl;

function mng_set_srgb            (    hHandle      : mng_handle;
                                      bIssRGB      : mng_bool         ) : mng_retcode;       cdecl;
function mng_set_outputprofile   (    hHandle      : mng_handle;
                                      zFilename    : mng_pchar        ) : mng_retcode;       cdecl;
function mng_set_srgbprofile     (    hHandle      : mng_handle;
                                      zFilename    : mng_pchar        ) : mng_retcode;       cdecl;

function mng_set_maxcanvaswidth  (    hHandle      : mng_handle;
                                      iMaxwidth    : mng_uint32       ) : mng_retcode;       cdecl;
function mng_set_maxcanvasheight (    hHandle      : mng_handle;
                                      iMaxheight   : mng_uint32       ) : mng_retcode;       cdecl;
function mng_set_maxcanvassize   (    hHandle      : mng_handle;
                                      iMaxwidth    : mng_uint32;
                                      iMaxheight   : mng_uint32       ) : mng_retcode;       cdecl;

{****************************************************************************}

function  mng_get_userdata        (    hHandle     : mng_handle       ) : mng_int32;         cdecl;

function  mng_get_sigtype         (    hHandle     : mng_handle       ) : mng_imgtype;       cdecl;
function  mng_get_imagetype       (    hHandle     : mng_handle       ) : mng_imgtype;       cdecl;
function  mng_get_imagewidth      (    hHandle     : mng_handle       ) : mng_uint32;        cdecl;
function  mng_get_imageheight     (    hHandle     : mng_handle       ) : mng_uint32;        cdecl;
function  mng_get_ticks           (    hHandle     : mng_handle       ) : mng_uint32;        cdecl;
function  mng_get_framecount      (    hHandle     : mng_handle       ) : mng_uint32;        cdecl;
function  mng_get_layercount      (    hHandle     : mng_handle       ) : mng_uint32;        cdecl;
function  mng_get_playtime        (    hHandle     : mng_handle       ) : mng_uint32;        cdecl;
function  mng_get_simplicity      (    hHandle     : mng_handle       ) : mng_uint32;        cdecl;

function  mng_get_canvasstyle     (    hHandle     : mng_handle       ) : mng_uint32;        cdecl;
function  mng_get_bkgdstyle       (    hHandle     : mng_handle       ) : mng_uint32;        cdecl;

procedure mng_get_bgcolor         (    hHandle     : mng_handle;
                                   var iRed        : mng_uint16;
                                   var iGreen      : mng_uint16;
                                   var iBlue       : mng_uint16       );                     cdecl;

function  mng_get_storechunks     (    hHandle     : mng_handle       ) : mng_bool;          cdecl;

function  mng_get_viewgammaint    (    hHandle     : mng_handle       ) : mng_uint32;        cdecl;
function  mng_get_displaygammaint (    hHandle     : mng_handle       ) : mng_uint32;        cdecl;
function  mng_get_dfltimggammaint (    hHandle     : mng_handle       ) : mng_uint32;        cdecl;

function  mng_get_srgb            (    hHandle     : mng_handle       ) : mng_bool;          cdecl;

function  mng_get_maxcanvaswidth  (    hHandle     : mng_handle       ) : mng_uint32;        cdecl;
function  mng_get_maxcanvasheight (    hHandle     : mng_handle       ) : mng_uint32;        cdecl;

{****************************************************************************}

const MNG_CANVAS_RGB8      = $00000000;
      MNG_CANVAS_RGB16     = $00000100;          { not supported yet }
      MNG_CANVAS_RGBA8     = $00001000;
      MNG_CANVAS_RGBA16    = $00001100;          { not supported yet }
      MNG_CANVAS_ARGB8     = $00003000;
      MNG_CANVAS_ARGB16    = $00003100;          { not supported yet }
      MNG_CANVAS_BGR8      = $00000001;
      MNG_CANVAS_BGR16     = $00000101;          { not supported yet }
      MNG_CANVAS_BGRA8     = $00001001;
      MNG_CANVAS_BGRA16    = $00001101;          { not supported yet }
      MNG_CANVAS_ABGR8     = $00003001;
      MNG_CANVAS_ABGR16    = $00003101;          { not supported yet }
      MNG_CANVAS_GRAY8     = $00000002;          { not supported yet }
      MNG_CANVAS_GRAY16    = $00000102;          { not supported yet }
      MNG_CANVAS_GRAYA8    = $00001002;          { not supported yet }
      MNG_CANVAS_GRAYA16   = $00001102;          { not supported yet }
      MNG_CANVAS_AGRAY8    = $00003002;          { not supported yet }
      MNG_CANVAS_AGRAY16   = $00003102;          { not supported yet }
      MNG_CANVAS_DX15      = $00000003;          { not supported yet }
      MNG_CANVAS_DX16      = $00000004;          { not supported yet }

{****************************************************************************}

const MNG_UINT_HUH  = $40404040;
